registry/kubefirst/components/new_minio/minio.yml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 9000
      name: web
    - port: 9090
      targetPort: 9090
      name: console
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2023-11-20T22-40-07Z
          args:
            - server
            - /data
            - --console-address
            - :9090
          ports:
            - containerPort: 9000
              name: web
            - containerPort: 9090
              name: console
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            exec:
              command: ["curl", "-f", "http://localhost:9000/minio/health/live"]
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 3
          readinessProbe:
            exec:
              command: ["curl", "-f", "http://localhost:9000/minio/health/live"]
            initialDelaySeconds: 3
            periodSeconds: 2
            timeoutSeconds: 1
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-pvc
