registry/kubefirst/components/new_minio/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: minio
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-wave: '10'
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio.k8s.dev.io`)
      services:
        - name: minio
          port: 80
  tls:
    secretName: minio-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio
  annotations:
    argocd.argoproj.io/sync-wave: '10'
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio-console.k8s.dev.io`)
      services:
        - name: minio-console
          port: 80
  tls:
    secretName: minio-console-tls
